old-pc/insfrastructure/server_one/server_one.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: jussmor/image-cloud:latest
          ports:
            - name: web
              containerPort: 8000
