old-pc/insfrastructure/server_one/server_one_services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: web
      port: 8000
      targetPort: web

  selector:
    app: whoami
